# dispatcher

./: .gitignore  CLAUDE.md  COWORK_CONTEXT.md  README.md  _governance_gate_probe.py  pyproject.toml
.claude/skills/: .gitignore
.github/workflows/: ci.yml  governance.yml
contracts/executor-config/v0-provisional/: README.md  schema.json
contracts/github-checker-snapshot/v1/: README.md
dispatcher/: __init__.py  cli.py  mcp_server.py
dispatcher/core/: __init__.py  actions.py  contracts.py  correlation.py  descriptions.py  discovery.py  models.py  onboarding.py  publish.py  read_api.py  roadmap.py  service.py  snapshot_contract.py  spec_runner_config.py  spec_runner_config_actions.py  spec_runner_config_schema.py  suggest_bundle.py  suggest_cli.py  sync.py  sync_service.py  tracking.py
dispatcher/core/collectors/: __init__.py  arbiter.py  atp.py  base.py  maestro.py  proctor.py  spec_runner.py
dispatcher/server/: __init__.py  app.py
dispatcher/server/static/: index.html
dispatcher/tui/: __init__.py  app.py  config_edit.py  detail.py
docs/superpowers/plans/: 2026-07-03-dispatcher-stage1.md  2026-07-05-dispatcher-tui-stage2.md  2026-07-05-dispatcher-vscode-stage3.md  2026-07-17-config-editor-ungating.md  2026-07-17-spec-runner-config-editor.md  2026-07-17-tui-parity.md  2026-07-17-vscode-parity.md  2026-07-18-config-suggestions.md  2026-07-18-extra-config-editing.md  2026-07-18-mcp-server.md  2026-07-18-onboarding-view.md  2026-07-18-vscode-onboarding.md
docs/superpowers/specs/: 2026-07-03-dispatcher-design.md  2026-07-05-dispatcher-tui-design.md  2026-07-05-dispatcher-vscode-design.md  2026-07-14-sync-roadmap-design.md  2026-07-17-config-editor-ungating-design.md  2026-07-17-fr06-tui-slice-design.md  2026-07-17-spec-runner-config-editor-design.md  2026-07-17-tui-parity-design.md  2026-07-17-vscode-parity-design.md  (+5 more)
spec/: design.md  discovery-brief-customer.md  discovery-brief-engineer.md  requirements.md  tasks.md
tests/: conftest.py  test_actions.py  test_api.py  test_arbiter.py  test_atp.py  test_base.py  test_cli.py  test_contracts.py  test_correlation.py  test_descriptions.py  test_discovery.py  test_maestro.py  test_mcp_server.py  test_models.py  test_onboarding.py  test_proctor.py  test_publish.py  test_roadmap.py  test_service.py  test_snapshot_contract.py  test_spec_runner.py  test_spec_runner_config.py  test_spec_runner_config_actions.py  test_spec_runner_config_integration.py  test_spec_runner_config_schema.py  test_suggest_bundle.py  test_suggest_cli.py  test_sync.py  test_sync_service.py  test_tracking.py  test_tui.py
vscode-ext/: .vscodeignore  esbuild.mjs  package-lock.json  package.json  tsconfig.json
vscode-ext/src/: api.ts  configFlow.ts  extension.ts  model.ts  onboarding.ts  server.ts  status.ts  tree.ts
vscode-ext/test/: api.test.ts  configFlow.test.ts  model.test.ts  onboarding.test.ts  roadmap.test.ts  scaffold.test.ts  server.test.ts
(+7 files in other folders)
