[project]
name = "dispatcher"
version = "0.1.0"
description = "Ecosystem dashboard with guarded git and config actions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "jsonschema>=4.26.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.19.1",
    "textual>=8.2.8,<9",
    "uvicorn>=0.49.0",
]

[project.scripts]
dispatcher = "dispatcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dispatcher"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = [".", "tests"]

[tool.prograph]
# File-based reads by dispatcher/core/collectors/*.py — invisible to
# prograph's import/MCP/contract detectors, so declared explicitly.
# Maestro's ~/.maestro/maestro.db is outside the monorepo and cannot be
# declared as a workspace-relative path.
reads = [
    "proctor/config/proctor.yaml",
    "proctor/data/state.db",
    "proctor/logs",
    "arbiter/arbiter.db",
    "arbiter/config/agents.toml",
    "arbiter/config/invariants.toml",
    "arbiter/config",
    "arbiter/logs",
    "atp-platform/.atp-dashboard.db",
    "atp-platform/results/experiment/experiment_results.json",
    "atp-platform/_bench_output",
    "atp-platform/method/agents-catalog.toml",
    "atp-platform/atp.config.yaml",
    "atp-platform/logs",
    "maestro/executor.config.yaml",
    "maestro/logs",
    "spec-runner/spec/.executor-state.db",
    "spec-runner/executor.config.yaml",
    "spec-runner/logs",
]

[dependency-groups]
dev = [
    "anyio>=4.14.1",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
